--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -8,7 +8,7 @@ app:
       enabled: true
       spec:
         permissions:
-          iam:
+          user:
             read: permission on all GET requests and POST search
-            write: permission on PUT, POST, PATCH requests, where objects are saved or updated
-            delete: permission on all DELETE requests
+          role:
+            read: permission on all GET requests and POST search
