feat: added native support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.config-key=onecx_ia
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.base-package=gen.org.tkit.onecx.iam.kc.client
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.return-response=true
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.additional-api-type-annotations=@org.eclipse.microprofile.rest.client.annotation.RegisterClientHeaders
+quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.additional-model-type-annotations=@io.quarkus.runtime.annotations.RegisterForReflection;
 
 
 # INTEGRATION TEST
