--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -10,5 +10,6 @@ app:
         permissions:
           user:
             read: permission on all GET requests and POST search
+            write: permission on PUT, POST, PATCH requests, where objects are saved or updated
           role:
             read: permission on all GET requests and POST search
