feat: activated client security

--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -13,3 +13,6 @@ app:
             write: permission on PUT, POST, PATCH requests, where objects are saved or updated
           role:
             read: permission on all GET requests and POST search
+    keycloak:
+      client:
+        enabled: true
