--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,6 @@ org.eclipse.microprofile.rest.client.propagateHeaders=apm-principal-token
 
 # PROD
 %prod.quarkus.rest-client.onecx_iam_kc_svc.url=http://onecx-iam-kc-svc:8080
-%prod.quarkus.oidc-client.client-id=${quarkus.application.name}
 
 # iam kc service client
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.config-key=onecx_iam_kc_svc
@@ -19,6 +18,9 @@ quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.return-response=tru
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.additional-api-type-annotations=@org.eclipse.microprofile.rest.client.annotation.RegisterClientHeaders
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.additional-model-type-annotations=@io.quarkus.runtime.annotations.RegisterForReflection;
 
+# OIDC
+%prod.quarkus.rest-client.onecx_iam_kc_svc_yaml.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
+%prod.quarkus.oidc-client.client-id=${quarkus.application.name}
 
 # INTEGRATION TEST
 quarkus.test.integration-test-profile=test
