feat: added pm:read

--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -18,4 +18,4 @@ app:
         enabled: true
         spec:
           kcConfig:
-            defaultClientScopes: [ ocx-ia:all ]
+            defaultClientScopes: [ ocx-ia:all, ocx-pm:read  ]
