--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -16,3 +16,6 @@ app:
     keycloak:
       client:
         enabled: true
+        spec:
+          kcConfig:
+            defaultClientScopes: [ ocx-ia:all, ocx-pm:read  ]
