chore(deps): bump org.tkit.onecx:onecx-quarkus3-parent from 0.71.0 to 0.72.0

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ org.eclipse.microprofile.rest.client.propagateHeaders=apm-principal-token
 
 # PROD
 %prod.quarkus.rest-client.onecx_iam_kc_svc.url=http://onecx-iam-kc-svc:8080
-
+quarkus.openapi-generator.codegen.input-base-dir=target/tmp/openapi
 # iam kc service client
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.config-key=onecx_iam_kc_svc
 quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.base-package=gen.org.tkit.onecx.iam.kc.client
