--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -11,10 +11,9 @@ app:
           user:
             read: permission on all GET requests and POST search
             write: permission on PUT, POST, PATCH requests, where objects are saved or updated
-          role:
+          admin:
             read: permission on all GET requests and POST search
-          realm:
-            read: permission on all GET requests and POST search
+            write: permission on PUT, POST, PATCH requests, where objects are saved or updated
     keycloak:
       client:
         enabled: true
