--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ quarkus.test.integration-test-profile=test
 %test.quarkus.mockserver.devservices.reuse=true
 %test.quarkus.rest-client.onecx_iam_kc_svc.url=${quarkus.mockserver.endpoint}
 %test.tkit.rs.context.token.header-param=apm-principal-token
-%test.tkit.rs.context.token.enabled=false
+%test.tkit.rs.context.token.enabled=true
 %test.quarkus.rest-client.onecx_iam_kc_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
 %test.tkit.rs.context.tenant-id.mock.claim-org-id=orgId
 %test.quarkus.rest-client.onecx_permission.url=${quarkus.mockserver.endpoint}
@@ -45,3 +45,6 @@ quarkus.test.integration-test-profile=test
 %test.quarkus.oidc-client.client-id=${quarkus.oidc.client-id}
 %test.quarkus.oidc-client.credentials.secret=${quarkus.oidc.credentials.secret}
 %test.onecx.permissions.product-name=applications
+
+%test.onecx.iam.clients.keycloak.url=${quarkus.mockserver.endpoint}/keycloak
+%test.onecx.iam.clients.aws.url=${quarkus.mockserver.endpoint}/aws
