feat: aligned to new svc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ onecx.permissions.application-id=${quarkus.application.name}
 # propagate the apm-principal-token from requests we receive
 org.eclipse.microprofile.rest.client.propagateHeaders=apm-principal-token
 
+# OIDC
+%prod.quarkus.oidc-client.client-id=${quarkus.application.name}
 
 # PROD
 %prod.quarkus.rest-client.onecx_iam_kc_svc.url=http://onecx-iam-kc-svc:8080
@@ -21,7 +23,6 @@ quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.enable-security-gen
 
 # OIDC
 %prod.quarkus.rest-client.onecx_iam_kc_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
-%prod.quarkus.oidc-client.client-id=${quarkus.application.name}
 
 # INTEGRATION TEST
 quarkus.test.integration-test-profile=test
@@ -46,5 +47,4 @@ quarkus.test.integration-test-profile=test
 %test.quarkus.oidc-client.credentials.secret=${quarkus.oidc.credentials.secret}
 %test.onecx.permissions.product-name=applications
 
-%test.onecx.iam.clients.keycloak.url=${quarkus.mockserver.endpoint}/keycloak
-%test.onecx.iam.clients.aws.url=${quarkus.mockserver.endpoint}/aws
+%test.onecx.iam.clients.keycloak.url=${quarkus.mockserver.endpoint}
