--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,18 +11,18 @@ org.eclipse.microprofile.rest.client.propagateHeaders=apm-principal-token
 %prod.quarkus.oidc-client.client-id=${ONECX_OIDC_CLIENT_CLIENT_ID:${quarkus.application.name}}
 
 # PROD
-%prod.quarkus.rest-client.onecx_iam_kc_svc.url=http://onecx-iam-kc-svc:8080
+%prod.quarkus.rest-client.onecx_iam_svc.url=http://onecx-iam-svc:8080
 quarkus.openapi-generator.codegen.input-base-dir=target/tmp/openapi
-# iam kc service client
-quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.config-key=onecx_iam_kc_svc
-quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.base-package=gen.org.tkit.onecx.iam.kc.client
-quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.return-response=true
-quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.additional-api-type-annotations=@org.eclipse.microprofile.rest.client.annotation.RegisterClientHeaders
-quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.additional-model-type-annotations=@io.quarkus.runtime.annotations.RegisterForReflection;
-quarkus.openapi-generator.codegen.spec.onecx_iam_kc_svc_yaml.enable-security-generation=false
+# iam service client
+quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.config-key=onecx_iam_svc
+quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.base-package=gen.org.tkit.onecx.iam.client
+quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.return-response=true
+quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.additional-api-type-annotations=@org.eclipse.microprofile.rest.client.annotation.RegisterClientHeaders
+quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.additional-model-type-annotations=@io.quarkus.runtime.annotations.RegisterForReflection;
+quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.enable-security-generation=false
 
 # OIDC
-%prod.quarkus.rest-client.onecx_iam_kc_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
+%prod.quarkus.rest-client.onecx_iam_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
 
 # INTEGRATION TEST
 quarkus.test.integration-test-profile=test
@@ -34,10 +34,10 @@ quarkus.test.integration-test-profile=test
 %test.quarkus.mockserver.devservices.config-dir=/mockserver
 %test.quarkus.mockserver.devservices.log=false
 %test.quarkus.mockserver.devservices.reuse=true
-%test.quarkus.rest-client.onecx_iam_kc_svc.url=${quarkus.mockserver.endpoint}
+%test.quarkus.rest-client.onecx_iam_svc.url=${quarkus.mockserver.endpoint}
 %test.tkit.rs.context.token.header-param=apm-principal-token
 %test.tkit.rs.context.token.enabled=true
-%test.quarkus.rest-client.onecx_iam_kc_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
+%test.quarkus.rest-client.onecx_iam_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
 %test.tkit.rs.context.tenant-id.mock.claim-org-id=orgId
 %test.quarkus.rest-client.onecx_permission.url=${quarkus.mockserver.endpoint}
 %test.quarkus.keycloak.devservices.roles.alice=role-admin
