--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -11,10 +11,13 @@ app:
       spec:
         permissions:
           user:
-            read: permission on all GET requests and POST search
-            write: permission on PUT, POST, PATCH requests, where objects are saved or updated
-          admin:
-            read: permission on all GET requests and POST search
+            admin-read: permission on all GET requests and POST search for admin operations
+          role:
+            admin-read: permission on all GET requests and POST search for admin operations
+          provider:
+            admin-read: permission on all GET requests and POST search for admin operations
+            read: permission on all GET requests and POST search for user operations
+          password:
             write: permission on PUT, POST, PATCH requests, where objects are saved or updated
     keycloak:
       client:
