feat: multi kc (#86)
* feat: multi kc support aligned to svc

* feat: from token flag for provider

* feat: switched to issuer approach

* feat: old gateway approach

* feat: aligned to new svc

* feat: update dockerfile

* fix: removed unused exceptions

* fix:: oidc

* feat: update svc url and permissions

* fix: removed scopes from api

* fix: openapi tags

* feat: make issuer required for user search

* feat: added provider to user

--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -11,15 +11,17 @@ app:
       spec:
         permissions:
           user:
-            read: permission on all GET requests and POST search
-            write: permission on PUT, POST, PATCH requests, where objects are saved or updated
+            admin-read: permission on all GET requests and POST search for admin operations
           role:
-            read: permission on all GET requests and POST search
-          realm:
-            read: permission on all GET requests and POST search
+            admin-read: permission on all GET requests and POST search for admin operations
+          provider:
+            admin-read: permission on all GET requests and POST search for admin operations
+            read: permission on all GET requests and POST search for user operations
+          password:
+            write: permission on PUT, POST, PATCH requests, where objects are saved or updated
     keycloak:
       client:
         enabled: true
         spec:
           kcConfig:
-            defaultClientScopes: [ ocx-ia:all, ocx-pm:read  ]
+            defaultClientScopes: [ ocx-ia:all, ocx-pm:read ]
