--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-hibernate-validator</artifactId>
         </dependency>
         <dependency>
@@ -179,10 +183,9 @@
                         </goals>
                         <configuration>
                             <url>
-                                https://raw.githubusercontent.com/onecx/onecx-iam-kc-svc/main/src/main/openapi/onecx-iam-kc-svc-internal.yaml
-                            </url>
+                                https://raw.githubusercontent.com/onecx/onecx-iam-svc/refs/heads/main/src/main/openapi/onecx-iam-svc-internal.yaml                            </url>
                             <outputDirectory>target/tmp/openapi</outputDirectory>
-                            <outputFileName>onecx-iam-kc-svc.yaml</outputFileName>
+                            <outputFileName>onecx-iam-svc.yaml</outputFileName>
                             <skipCache>true</skipCache>
                         </configuration>
                     </execution>
