--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,6 @@ onecx.permissions.application-id=${quarkus.application.name}
 # propagate the apm-principal-token from requests we receive
 org.eclipse.microprofile.rest.client.propagateHeaders=apm-principal-token
 
-# OIDC
-%prod.quarkus.oidc-client.client-id=${ONECX_OIDC_CLIENT_CLIENT_ID:${quarkus.application.name}}
-
 # PROD
 %prod.quarkus.rest-client.onecx_iam_svc.url=http://onecx-iam-svc:8080
 quarkus.openapi-generator.codegen.input-base-dir=target/tmp/openapi
@@ -22,7 +19,7 @@ quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.additional-model-type-
 quarkus.openapi-generator.codegen.spec.onecx_iam_svc_yaml.enable-security-generation=false
 
 # OIDC
-%prod.quarkus.rest-client.onecx_iam_kc_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
+%prod.quarkus.rest-client.onecx_iam_svc.providers=io.quarkus.oidc.client.reactive.filter.OidcClientRequestReactiveFilter
 %prod.quarkus.oidc-client.client-id=${ONECX_OIDC_CLIENT_CLIENT_ID:${quarkus.application.name}}
 
 # INTEGRATION TEST
