feat: create update user - create role - assign role

--- a/src/main/helm/values.yaml
+++ b/src/main/helm/values.yaml
@@ -12,8 +12,10 @@ app:
         permissions:
           user:
             admin-read: permission on all GET requests and POST search for admin operations
+            admin-write: permission on all POST and PUT requests for admin operations
           role:
             admin-read: permission on all GET requests and POST search for admin operations
+            admin-write: permission on all POST and PUT requests for admin operations
           provider:
             admin-read: permission on all GET requests and POST search for admin operations
             read: permission on all GET requests and POST search for user operations
